# Video-Code

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Main.cpp  Makefile  README.md  README_new.md  feat.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  vcpkg-configuration.json  vcpkg.json  video.py
.github/: copilot-instructions.md
.github/workflows/: cd-mirror.todo  cd-mirror.yaml  ci-build.todo  ci-build.yaml  ci-formatting.yaml
assets/luts/: identity16.cube  warm.cube
assets/mathshaders/: fire.glsl  plasma.glsl  silk.glsl  starnest.glsl
cmake/: FindWrapOpenGL.cmake  vcpkg-toolchain-gcc13.cmake
docs/: ADDING_EFFECTS.md  CONTRIBUTING_INTEGRATION.md  DOCUMENTATION.md  FEATURES.md  SETUP_LINUX.md  beta_test_plan.md  ffmpeg.md  optimization.md  optimizations_summary.md
frontend/: Constant.py  Global.py  Scene.py  Serialize.py  VideoCode.py  _ty.py
include/: ByteMatrix.hpp  Command.hpp  CommandFactory.hpp  Input.hpp  basicFunction.hpp
plugins/: CMakeLists.txt  README.md
plugins/inputs/gradient/: gradient_cpp.cpp  gradient_plugin.py  plugin.json
plugins/sources/blur/cpp/: CMakeLists.txt  blur_plugin.cpp
plugins/sources/blur/python/: blur_plugin.py
plugins/sources/brightness/cpp/: CMakeLists.txt  brightness_plugin.cpp
plugins/sources/brightness/python/: brightness_plugin.py
plugins/sources/circle/cpp/: CMakeLists.txt  circle_plugin.cpp
plugins/sources/circle/python/: circle_plugin.py
plugins/sources/contrast/cpp/: CMakeLists.txt  contrast_plugin.cpp
plugins/sources/contrast/python/: contrast_plugin.py
plugins/sources/gamma/cpp/: CMakeLists.txt  gamma_plugin.cpp
plugins/sources/gamma/python/: gamma_plugin.py
plugins/sources/grain/cpp/: CMakeLists.txt  grain_plugin.cpp
plugins/sources/grain/python/: grain_plugin.py
plugins/sources/grayscale/cpp/: CMakeLists.txt  grayscale_plugin.cpp
plugins/sources/grayscale/python/: grayscale_plugin.py
plugins/sources/image/cpp/: CMakeLists.txt  image_plugin.cpp
plugins/sources/image/python/: image_plugin.py
plugins/sources/line/cpp/: CMakeLists.txt  line_plugin.cpp
plugins/sources/line/python/: line_plugin.py
plugins/sources/opacity/cpp/: CMakeLists.txt  opacity_plugin.cpp
plugins/sources/opacity/python/: opacity_plugin.py
plugins/sources/rectangle/cpp/: CMakeLists.txt  rectangle_plugin.cpp
plugins/sources/rectangle/python/: rectangle_plugin.py
plugins/sources/sharpen/cpp/: CMakeLists.txt  sharpen_plugin.cpp
plugins/sources/sharpen/python/: sharpen_plugin.py
plugins/sources/text/cpp/: CMakeLists.txt  text_plugin.cpp
plugins/sources/text/python/: text_plugin.py
plugins/sources/webimage/cpp/: CMakeLists.txt  webimage_plugin.cpp
plugins/sources/webimage/python/: webimage_plugin.py
plugins/transformations/blur/: blur_cpp.cpp  blur_plugin.py  plugin.json
python/: Define.py  Input.py  Transformation.py  Types.py  VideoCode.py  _ty.py
scripts/: build_plugin.sh  build_plugins.sh  setup-linux.sh
src/: Main.cpp  basicFunction.cpp
test/: CMakeLists.txt  Tuple.py  VideoCode.py  adjustment_layer_test.py  background_test.py  beat_sync_test.py  blend_modes_test.py  ch.py  circular1.py  circular2.py  classTest.py  cross_test.py  dashed_line_test.py  deco.py  easing_test.py  effects2_test.py  effects3_test.py  effects4_test.py  effects5_test.py  effects_test.py  enums_test.py  eval_test.py  fill_shader_test.py  focus_on_test.py  gradient_test.py  group_test.py  helpers.py  highlight_test.py  inheritance.py  lut_test.py  markdown_test.py  math_shader_test.py  mathtex_test.py  matte_test.py  mirror_test.py  myuint.py  plugin_example.py  resize_test.py  run_tests.sh  scrap.py  (+15 more)
test/fonctionnal/: run_test.sh
test/fonctionnal/scripts/: inputImage.py  inputText.py  inputVideo.py  transformeFade.py  transformeGrayscale.py  transformeMove.py  transformeRepeat.py  transformeTranslate.py
test/perf/: bench.py  stress_morph.py  stress_text.py
test/unit/: fade.cpp  move.cpp  translate.cpp
test/visual/scenes/: adjustment_layer.py  animation.py  background.py  blend_modes.py  chess.py  crop.py  curve.py  easings.py  effect_shaders.py  effect_shaders2.py  effect_shaders3.py  effect_shaders4.py  effect_templates.py  effect_templates2.py  effect_templates3.py  glow.py  gradient.py  gradient_conic.py  gradient_holes.py  gradient_percent.py  groups.py  groups_scale.py  image_shape.py  layers.py  lightsweep.py  lightsweep_group.py  lut.py  markdown.py  mathtex.py  matte.py  mirror.py  reload_a.py  reload_b.py  resize.py  shadow.py  shapes.py  silk.py  sound.py  stateful_group_scale.py  subtitles.py  (+7 more)
tests/: test_plugin_system.py
tests/cpp/: CMakeLists.txt
tests/cpp/compiler/: CompilerComprehensiveTests.cpp  CompilerTests.cpp
tests/cpp/core/: CoreAdvancedTests.cpp  CoreCoverageTests.cpp  CoreTests.cpp  FactoryTests.cpp
tests/cpp/input/: AInputAdvancedTests.cpp  AInputTests.cpp  FrameTests.cpp  IInputTests.cpp  IterableTests.cpp
tests/cpp/input/media/: ImageTests.cpp  MediaCoverageTests.cpp  MediaInputTests.cpp  VideoComprehensiveTests.cpp  VideoTests.cpp  WebImageTests.cpp
tests/cpp/input/shape/: CircleComprehensiveTests.cpp  CircleTests.cpp  RectangleComprehensiveTests.cpp  RectangleTests.cpp
tests/cpp/input/text/: CharTests.cpp  FormulaTests.cpp  TextTests.cpp
tests/cpp/python/: APITests.cpp
tests/cpp/transformation/: ColorTransformationTests.cpp  FadeTests.cpp  GrayscaleTests.cpp  MoveToTests.cpp  PositionTransformationTests.cpp  ScaleTests.cpp  SetAlignTests.cpp  SetArgumentTests.cpp  SizeTransformationTests.cpp  TransformationTests.cpp  ZoomTests.cpp
tests/cpp/utils/: DebugDisabledTests.cpp  DebugTests.cpp  ExceptionTests.cpp  MapTests.cpp  StringTests.cpp  VectorTests.cpp
tests/cpp/window/: WindowAdvancedTests.cpp  WindowComprehensiveTests.cpp  WindowCoverageTests.cpp  WindowTests.cpp
vcpkg-overlay-triplets/: x64-linux.cmake
videocode/: Constant.py  Decorators.py  Global.py  Serialize.py  Utils.py  VideoCode.py  __init__.py  color.py  constants.py  context.py  globals.py  plugin_loader.py  serialize.py  ty.py  ui_schema.py  videocode.py
(+501 files in other folders)
