cmake_minimum_required(VERSION 3.21)
project(vc-plugin-text LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(NOT VIDEO_CODE_ROOT)
  message(FATAL_ERROR "VIDEO_CODE_ROOT must be provided")
endif()
find_package(OpenCV REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
add_library(text_plugin SHARED text_plugin.cpp ${VIDEO_CODE_ROOT}/src/input/AInput.cpp)
target_include_directories(text_plugin PRIVATE ${VIDEO_CODE_ROOT}/include)
target_link_libraries(text_plugin PRIVATE ${OpenCV_LIBS} nlohmann_json::nlohmann_json)
set_target_properties(text_plugin PROPERTIES OUTPUT_NAME "text_plugin")
